[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/dialogs/about_dialog.gd" type="Script" id=1]
[ext_resource path="res://Assets/icon.png" type="Texture" id=2]
[ext_resource path="res://UI/Themes/theme_dark.tres" type="Theme" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="AboutDialog" type="WindowDialog"]
visible = true
margin_right = 450.0
margin_bottom = 190.0
rect_min_size = Vector2( 450, 190 )
theme = ExtResource( 3 )
window_title = "ABOUT_DIALOG_TITLE"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -7.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 438.0
margin_bottom = 171.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 426.0
margin_bottom = 64.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 68.0
margin_right = 426.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 12
custom_constants/margin_top = 2
custom_constants/margin_left = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer"]
margin_left = 12.0
margin_top = 2.0
margin_right = 346.0
margin_bottom = 64.0
alignment = 1

[node name="VersionLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 1.0
margin_right = 334.0
margin_bottom = 18.0
text = "GAME_TITLE v%s"

[node name="CopyrightLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 22.0
margin_right = 334.0
margin_bottom = 39.0
text = "ABOUT_DIALOG_COPYRIGHT"

[node name="GithubLinkButton" type="LinkButton" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 43.0
margin_right = 220.0
margin_bottom = 60.0
size_flags_horizontal = 0
text = "github.com/vmjcv/journey_in_world"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 426.0
margin_bottom = 72.0
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 4

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 426.0
margin_bottom = 93.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 170.0
margin_bottom = 17.0
text = "ABOUT_DIALOG_LICSENSE"

[node name="LicenseButton" type="LinkButton" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 174.0
margin_right = 249.0
margin_bottom = 17.0
text = "MIT License"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 97.0
margin_right = 426.0
margin_bottom = 117.0
custom_constants/separation = 20

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 121.0
margin_right = 426.0
margin_bottom = 138.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
margin_right = 177.0
margin_bottom = 17.0
text = "ABOUT_DIALOG_BASED_ON"

[node name="GodotButton" type="LinkButton" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 181.0
margin_right = 307.0
margin_bottom = 17.0
focus_mode = 2
text = "Godot Game Engine"

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 142.0
margin_right = 426.0
margin_bottom = 159.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
margin_right = 152.0
margin_bottom = 17.0
text = "ABOUT_DIALOG_SET_IN"

[node name="RemixIconsButton" type="LinkButton" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
margin_left = 156.0
margin_right = 223.0
margin_bottom = 17.0
focus_mode = 2
text = "Remix Icon"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/GithubLinkButton" to="." method="_on_GithubLinkButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/LicenseButton" to="." method="_on_LicenseButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer3/GodotButton" to="." method="_on_GodotButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer4/RemixIconsButton" to="." method="_on_RemixIconsButton_pressed"]
